2024-02-07, study기능 1차 완성