@@ -1,48 +1,55 @@
-package com.getcode.dto.study;
+package com.getcode.dto.study.response;
 
 import com.getcode.domain.study.Study;
-import com.getcode.domain.study.StudySubject;
 import com.getcode.dto.member.MemberInfoDto;
-import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
+
 @Getter
 @AllArgsConstructor
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 public class StudyInfoResponseDto {
+    private Long id;
     private String title;
     private String content;
-    private String region;
+    private String siDo;
+    private String guGun;
     private boolean recruitment;
     private boolean online;
     private int views;
-    private int count;
+    private int likeCnt;
     private List<String> contact;
-    private String date;
+    private LocalDateTime createDate;
+    private LocalDateTime modifiedDate;
     private MemberInfoDto member;
     private List<StudyCommentResponseDto> comments;
-    private List<String> subjects;
+    private List<String> studyFields;
 
     public static StudyInfoResponseDto toDto(Study study) {
         return new StudyInfoResponseDto(
+                study.getId(),
                 study.getTitle(),
-                study.getContent(),
-                study.getRegion(),
+                study.getContent().substring(0,15),
+                study.getSiDo(),
+                study.getGuGun(),
                 study.isRecruitment(),
                 study.isOnline(),
                 study.getViews(),
-                study.getCount(),
+                study.getLikeCnt(),
                 Arrays.stream(study.getContact().split("\\^")).toList(),
-                study.getModifiedDate().format(DateTimeFormatter.ofPattern("yyyy/MM/dd HH:mm:ss")),
+                study.getCreateDate(),
+                study.getModifiedDate(),
                 MemberInfoDto.toDto(study.getMember()),
                 study.getComments().stream().map(StudyCommentResponseDto::toDto).collect(Collectors.toList()),
-                study.getSubjects().stream().map(StudySubject::getSubject).collect(Collectors.toList())
+                study.getFields().stream().map(sf -> sf.getField().print()).toList()
         );
     }
 
